<resources>
    <string name="app_name">Weather Station</string>
    <string name="city_name">%1$s</string>
    <string name="temperature">%1$d°</string>
    <string name="feels_like">Feels like %1$d°</string>
    <string name="low">Low %1$d°</string>
    <string name="high">High %1$d°</string>
    <string name="humidity">Humidity %1$d%%</string>
    <string name="pressure">Pressure %1$dhPa</string>
    <string name="forecast">Forecast</string>
    <string name="title_activity_forecast">Forecast</string>
    <string name="forecast_name">Forecast</string>
    <string name="temp">Temp: %1$d°</string>
    <string name="forecastHigh">High: %1$d°</string>
    <string name="forecastLow">Low: %1$d°</string>
    <string name="sunrise">Sunrise: %1$s</string>
    <string name="sunset">Sunset: %1$s</string>
    <string name="apiKey">6d3cbb90efe05909395139d822e2357b</string>
    <string name="zip_code">ZIP Code</string>
    <string name="submit">Submit</string>
    <string name="current_name">Current Weather Conditions</string>
    <string name="search_name">Search</string>
    <string name="invalid_zip_code">Error: ZIP Code not found</string>
    <string name="ok">OK</string>
    <string name="getLocal">Get Local Data</string>
    <string name="location_permission_rationale">This application requires permission to use your phone\'s GPS location to provide user-relevant weather data.</string>
    <string name="location_permission_denied">Location permissions required for automatic local weather data.</string>
    <string name="notification_title">Current Weather</string>
    <string name="notification_text">Location: %1$s Temperature: %2$d</string>
    <string name="startNotifications">Enable Notifications</string>
    <string name="disableNotifications">Disable Notifications</string>
    <string name="channel_description">Channel for weather updates</string>
    <string name="channel_name">WeatherUpdateChannel</string>
    <string name="forecast_item_name">Forecast for %1$s</string>
    <string name="wind_speed">Wind Speed: %1$d mph</string>
</resources>