<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/searchFragment">

    <fragment
        android:id="@+id/currentFragment"
        android:name="com.example.weatherstation.CurrentFragment"
        android:label="@string/current_name" >
        <action
            android:id="@+id/action_currentFragment_to_forecastFragment"
            app:destination="@id/forecastFragment" />
        <argument
            android:name="currentConditions"
            app:argType="com.example.weatherstation.CurrentConditions" />
        <argument
            android:name="zipCode"
            app:argType="string"
            app:nullable="true"/>
        <argument
            android:name="lat"
            app:argType="string"
            app:nullable="true"/>
        <argument
            android:name="lon"
            app:argType="string"
            app:nullable="true"/>
    </fragment>
    <fragment
        android:id="@+id/forecastFragment"
        android:name="com.example.weatherstation.ForecastFragment"
        android:label="@string/forecast_name">
        <argument
            android:name="zipCode"
            app:argType="string"
            app:nullable="true"/>
        <argument
            android:name="lat"
            app:argType="string"
            app:nullable="true"/>
        <argument
            android:name="lon"
            app:argType="string"
            app:nullable="true"/>
        <action
            android:id = "@+id/action_forecastFragment_to_forecastItem"
            app:destination="@id/ForecastItemFragment"/>
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.weatherstation.SearchFragment"
        android:label="@string/search_name">

        <action
            android:id="@+id/action_searchFragment_to_currentFragment"
            app:destination="@id/currentFragment" />

    </fragment>

    <fragment
        android:id="@+id/ForecastItemFragment"
        android:name="com.example.weatherstation.ForecastItemFragment"
        android:label="@string/forecast_item_name">
        <argument
            android:name="data"
            app:argType="com.example.weatherstation.DayForecast"/>
    </fragment>


</navigation>